# TENSUM

./: .gitignore  CMakeLists.txt  README.md  makefile
examples/Euler/forward_step/: generate_plots.py  input.param  param.in  step.geo
examples/Euler/naca/: input.param  (+3 more)
examples/forward_step/: input.param  param.in  step_transfinite.geo
examples/isentropic_vortex/: input.param  param.in  square_trans.geo
examples/shock_tube/: README.txt  input.param  line_extract.py  param.in  plot_soln.py  shocktube.geo  shocktube.msh
grid_gen/: complete_connections.cc  create_partitions.cc  gmsh_split.cc  grid.h  grid_read.cc  main.cc  makefile.in  process_command_line.cc  read_gmsh.cc  remove_pseudo_files.cc  safe_logic.h
grid_gen/ARCH/: compare_faces.cc  create_partitions.cc  create_pseudo_files.cc  gmsh_split.cc  grid.h  grid_read.cc  main.cc  makefile  makefile.in  process_command_line.cc  read_gmsh.cc  reader.h  vec.h
py_wrap/: tensum_run.py
readme/: README.md
src/: bc.h  check_for_stop_file.cc  compute_ssw.cc  constants.h  convar.h  entvar.h  exact.h  face.h  flux.h  force.cc  force.h  fparser.h  fv.cc  fv.h  grid.h  grid_preproc.cc  grid_read.cc  group_lists.cc  ic.h  kep.cc  kepec.cc  kepes_tecno_roe.cc  kepes_tecno_rusanov.cc  limiter.h  main.cc  makefile  makefile.in  material.cc  material.h  mpi_utils.cc  mpi_utils.h  output_heatflux.cc  output_skin_friction.cc  parameter.cc  parameter.h  perturb.cc  perturb.h  primvar.h  process_command_line.cc  read_part_mesh_file.cc  (+23 more)
src/ARCH/: central_flux_correction.cc  output_mesh_Pe.cc  save_pdf.cc  save_sample_pdf.cc
(+36 files in other folders)
